<resources>
    <string name="app_name">NarodnyiApp</string>
    <string name="h">H!</string>
    <string name="title_activity_rules">RulesActivity</string>
    <string name="phone_number">+38(050)000-00-00</string>
    <string name="data_agree">Я згоден на обробку даних</string>
    <string name="contin">Продовжити</string>
    <string name="registration">Вхід</string>
    <string name="new_password">Новий пароль</string>
    <string name="input_password">Введіть пароль</string>
    <string name="input_PIN">PIN</string>
    <string name="accept">Підтвердити</string>
    <string name="inputTelephoneNumber">Введіть пароль</string>
    <string name="login">ВХІД</string>
    <string name="OK">ОК</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="cabinet">Мій кабінет</string>
    <string name="form">Форма скарги</string>
    <string name="carPlate">Автомобільний номер</string>
    <string name="description">Опис порушення</string>
    <string name="comment">Комментар</string>
</resources>
