<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SentForm">

    <TextView
        android:id="@+id/form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <EditText
        android:id="@+id/carPlate"
        android:layout_width="274dp"
        android:layout_height="79dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/carPlate"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form"
        app:layout_constraintVertical_bias="0.073" />

    <EditText
        android:id="@+id/description"
        android:layout_width="274dp"
        android:layout_height="79dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form"
        app:layout_constraintVertical_bias="0.285" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="274dp"
        android:layout_height="79dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/comment"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form" />

    <Button
        android:id="@+id/telephone_login_accept_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OK"
        app:layout_constraintTop_toBottomOf="@+id/carPlate"
        android:width="220dp"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.73" />

</android.support.constraint.ConstraintLayout>