<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/LoginView"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="36sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197" />

    <EditText
        android:id="@+id/telephoneEditText"
        android:layout_width="274dp"
        android:layout_height="79dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/inputTelephoneNumber"
        android:inputType="phone"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginView"
        app:layout_constraintVertical_bias="0.139" />

    <Button
        android:id="@+id/telephone_login_accept_button"
        android:layout_width="179dp"
        android:layout_height="81dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/OK"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telephoneEditText"
        app:layout_constraintVertical_bias="0.313" />

</android.support.constraint.ConstraintLayout>